syntax = "proto3";
package xbc.v2;

option go_package = "./xbc_v2";

import "google/protobuf/empty.proto";

service OutboxService {
    rpc PollAgentEvent (PollAgentEventRequest) returns (PollAgentEventResponse);
    rpc CommitAgentEvent (CommitAgentEventRequest) returns (google.protobuf.Empty);
}

enum AgentEventType {
    AGENT_EVENT_UNSPECIFIED = 0;
    AGENT_EVENT_REGISTER = 1;
    AGENT_EVENT_UNREGISTER = 2;
    AGENT_EVENT_ACTIVATE = 3;
    AGENT_EVENT_UPDATE = 4;
    AGENT_EVENT_ONBOARD = 5;
    AGENT_EVENT_DEACTIVATE = 6;
    AGENT_EVENT_SCENARIO_ACTION_RESULT_REPORT = 7;
    AGENT_EVENT_DUPLICATE = 8;
}

message AgentEvent {
    int64 event_id = 1;
    string device_id = 2;
    AgentEventType event_type = 3;
    string contents = 4;
}

// Poll events from xbc-ams-db
message PollAgentEventRequest {
    int64 partition_number = 1;
    int64 count = 2;
}

message PollAgentEventResponse {
    repeated AgentEvent events = 1;
}

// Commit events to xbc-ams-db
// Currently, "consumer_name" will be pod name of xbc-outbox-forward-server
// e.g. xbc-outbox-forward-server-0
message CommitAgentEventRequest {
    int64 partition_number = 1;
    int64 offset_id = 2;
    string consumer_name = 3;
}
